<resources>
    <string name="app_name">Tutorial</string>
    <string name="Layouts">Layouts</string>
    <string name="Life_Cycle">Activity Life Cycle</string>
    <string name="User_Interface">User Interface</string>
    <string name="custom_style">Custom Style</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="table_layout">Table Layout</string>
    <string name="memory_leak">Memory Leak</string>
    <string name="account">Account:</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="your_name">Your Name</string>
    <string name="text_view">Text View</string>
    <string name="your_age">%1$s，出生於西元%2$d，現年%3$d歲。</string>
    <string name="edit_text">Edit Text</string>
    <string name="image_view">Image View</string>
    <string name="rotate_image">Rotate Image</string>
    <string name="image_resize">Image Resize</string>
    <string name="button">Button</string>

    <string name="link_text"><a href="tel:0922123456">打電話0922123456</a></string>

    <!-- Life Cycle-->
    <string name="lifecycle_method_list">Lifecycle Method List</string>
    <string name="activity_status">Activity Status</string>
    <string name="dialog_text">Simple Dialog</string>

    <string name="on_create">onCreate</string>
    <string name="on_destroy">onDestroy</string>
    <string name="on_start">onStart</string>
    <string name="on_restart">onRestart</string>
    <string name="on_stop">onStop</string>
    <string name="on_pause">onPause</string>
    <string name="on_resume">onResume</string>

    <string name="activity_a_label">Activity A</string>
    <string name="activity_b_label">Activity B</string>
    <string name="activity_c_label">Activity C</string>

    <string name="btn_start_a_label">Start A</string>
    <string name="btn_start_b_label">Start B</string>
    <string name="btn_start_c_label">Start C</string>
    <string name="btn_start_dialog_label">Dialog</string>

    <string name="btn_finish_a_label">Finish A</string>
    <string name="btn_finish_b_label">Finish B</string>
    <string name="btn_finish_c_label">Finish C</string>
    <string name="btn_finish_dialog_label">Close</string>

    <string name="on_activity_created">onActivityCreated</string>
    <string name="on_attach">onAttach</string>
    <string name="on_create_view">onCreateView</string>
    <string name="on_destroy_view">onDestroyView</string>
    <string name="on_detach">onDetach</string>
    <string name="on_view_created">onViewCreated</string>
    <string name="activity_a">Activity A</string>

    <string name="start_a">Start A</string>
    <string name="start_b">Start B</string>
    <string name="start_c">Start C</string>

    <string name="close">Close</string>
    <string name="dialog">Dialog</string>

    <string name="spinner_prompt">提示字元!</string>
    <string-array name="languages">
        <item>c語言</item>
        <item>java </item>
        <item>php</item>
        <item>xml</item>
        <item>html</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

    <string name="Taipei101">台北101</string>
    <string name="EDA">義大</string>
    <string name="zoom_in">＋</string>
    <string name="zoom_out">－</string>

    <string name="gcm_defaultSenderId">1054935626908</string>

    <!-- Menus-->
    <string name="action_settings">設定</string>

    <string name="action_search">搜尋</string>
    <string name="action_record">錄影</string>
    <string name="action_save">存檔</string>
    <string name="action_label_long">新增標籤長長長長長長長長長長長</string>
    <string name="action_label">新增標籤</string>
    <string name="action_label_short">新標籤</string>
    <string name="action_play">播放</string>
    <string name="hello_world_again">Hello world, again!</string>
    <string name="second">Go To Second Activity</string>
    <string name="second_activity_title">Second Activity</string>
    <string name="submenu">子選單</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
