<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/layouts"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/Layouts" />

            <Button
                android:id="@+id/lifeCycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Life_Cycle" />

            <Button
                android:id="@+id/fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fragment" />

            <Button
                android:id="@+id/inputControl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/User_Interface" />

            <Button
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Containers" />

            <Button
                android:id="@+id/customStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/patched_button"
                android:text="@string/custom_style" />

            <Button
                android:id="@+id/memoryLeak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/memory_leak" />

            <Button
                android:id="@+id/multiThread"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Multi-Thread" />

            <Button
                android:id="@+id/dataStorage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Data Storage" />

            <Button
                android:id="@+id/gMap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Google Map" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
